Previews controller (#10)
* Added services for querying solr and getting thumbnail image preview urls

* Updated gems, travis and docker related items

* Re-added iiif routes to arks controller 

* Recorded VCR cassettes for external services [skip ci]

* Finshed rswag open api specs

* Regenerated rswag documentation
